Cdata-Handler deactivated